// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DailyMotion video renders null 1`] = `<DocumentFragment />`;

exports[`Vimeo video renders null 1`] = `<DocumentFragment />`;

exports[`Wistia video renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  padding-top: 56.25%;
  margin: 24px 0px;
  border-radius: 16px;
  overflow: hidden;
}

.emotion-1 {
  position: absolute;
  top: 0;
  left: 0;
}

.emotion-1>div {
  position: -webkit-sticky;
  position: sticky;
}

.emotion-1 video {
  background: #FFFFFF!important;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="react-player__preview"
      >
        Wistia Player Preview
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`YouTube video renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  padding-top: 56.25%;
  margin: 24px 0px;
  border-radius: 16px;
  overflow: hidden;
}

.emotion-1 {
  position: absolute;
  top: 0;
  left: 0;
}

.emotion-1>div {
  position: -webkit-sticky;
  position: sticky;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="react-player__preview"
      >
        YouTube Player Preview
      </div>
    </div>
  </div>
</DocumentFragment>
`;
